samples/_failures_safe/1761416790_408131_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b33c4b1.c: In function ‘main’:
./samples/SAFE/__tmp_6b33c4b1.c:170:38: error: missing terminating ' character
  170 |     if (len > 0 && input[len - 1] == '\
      |                                      ^~
./samples/SAFE/__tmp_6b33c4b1.c:170:5: error: expected expression at end of input
  170 |     if (len > 0 && input[len - 1] == '\
      |     ^~
./samples/SAFE/__tmp_6b33c4b1.c:170:5: error: expected declaration or statement at end of input
